--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
     annotationProcessor 'com.github.gfx.android.orma:orma-processor:4.1.0'
     provided 'javax.annotation:jsr250-api:1.0'
+    provided 'org.projectlombok:lombok:1.12.6'
     testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 }
