--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.google.dagger:dagger:2.8'
     compile 'com.github.gfx.android.orma:orma:4.1.0'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'org.twitter4j:twitter4j-core:4.0.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
