--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,21 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".presentation.activity.TwitterOAuthActivity"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data
+                    android:host="twitter"
+                    android:scheme="flex" />
+            </intent-filter>
+
+        </activity>
 
     </application>
 
