--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ apply plugin: 'com.github.triplet.play'
 android {
     signingConfigs {
         releaseKey {
-            keyAlias 'releaseKeyAlias'
-            keyPassword 'hogehoge'
-            storeFile file('/Users/mitsuhori_y/AndroidStudioProjects/FlexApp/keystore/release_keystore.jks')
-            storePassword 'hogehoge'
+            keyAlias releaseKeyAlias
+            keyPassword System.getenv("KSTOREPWD")
+            storeFile file(releaseKeyStore)
+            storePassword System.getenv("KEYPWD")
         }
     }
     compileSdkVersion 25
