--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.github.triplet.play'
 
@@ -70,4 +71,9 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     provided 'org.projectlombok:lombok:1.12.6'
     testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+    compile 'com.facebook.android:facebook-android-sdk:4.18.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
