--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name=".presentation.activity.MainActivity"
             android:screenOrientation="portrait">
@@ -34,6 +39,18 @@
                     android:host="twitter"
                     android:scheme="flex" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".presentation.activity.FbOAuthActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
 
         </activity>
 
