--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.50'
     repositories {
         jcenter()
         mavenCentral()
@@ -12,6 +13,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'gradle.plugin.me.tatarka:gradle-retrolambda:3.4.0'
         classpath 'com.github.triplet.gradle:play-publisher:1.1.5'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
