--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".presentation.FlexApp"
         android:allowBackup="true"
         android:icon="@drawable/sample_thumb"
         android:label="@string/app_name"
