--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         }
     }
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "jp.co.flexapp"
         minSdkVersion 18
@@ -27,6 +27,11 @@ android {
         versionCode 5
         versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -81,6 +86,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'android.arch.persistence.room:runtime:1.0.0-beta1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-beta1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-beta1'
 }
 repositories {
