--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'android.arch.persistence.room:runtime:1.0.0-beta1'
+    compile 'android.arch.persistence.room:rxjava2:1.0.0-beta1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-beta1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-beta1'
 }
